--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,34 @@ a.menu-logo {
   text-decoration: none;
   color: #FFF;
   font-size: 1.125em;
-  
+}
 
+/* === INTRO */
+
+.intro {
+  background: url("../img/bg-intro.jpg") no-repeat center center;
+  background-size: cover;
+  padding: 150px 0;
+  text-align: center;
+  color: #FFF;
+}
+
+.intro h1 {
+  text-transform: uppercase;
+  font-size: 3em;
+}
+
+.intro h1::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 4px;
+  background: #FFF;
+  margin: 10px auto;
+}
+
+.intro p {
+  font-style: italic;
+  font-size: 1.125em;
 }
 
