--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body, h1, h2, h3, p, ul {
   padding: 0px;
   margin: 0px;
@@ -53,6 +54,20 @@ a.menu-logo {
   font-size: 1.125em;
 }
 
+@media (max-width: 739px){
+  .menu {
+    text-align: center;
+  }
+  a.menu-logo {
+    float: none;
+    margin: 0 auto;
+  }
+  .menu-nav {
+    float: none;
+    clear: both;
+  }
+}
+
 /* === INTRO */
 
 .intro {
@@ -80,6 +95,12 @@ a.menu-logo {
 .intro p {
   font-style: italic;
   font-size: 1.125em;
+}
+
+@media (max-width: 739px){
+  .intro {
+    padding: 60px 0;
+  }
 }
 
 /* === SOBRE === */
@@ -137,6 +158,25 @@ a.menu-logo {
   text-align: center;
   margin: 20px auto;
   max-width: 460px;
+}
+
+@media (max-width: 740px) and (max-width: 980px){
+  .sobre-container {
+    max-width: 720px;
+  }
+  .sobre-item {
+    width: 340px;
+  }
+}
+
+@media (max-width: 739px) {
+  .sobre-container {
+    max-width: 300px;
+  }
+  .sobre-item {
+    width: 300px;
+    margin: 0 auto;
+  }
 }
 
 /* === PRODUTOS === */
@@ -211,7 +251,24 @@ h2.produtos-mineiro::before {
   text-align: center;
   padding: 15px 0;
   margin: 2px auto 0 auto;
+}
 
+@media (max-width: 740px) and (max-width: 980px){
+  .produtos-container {
+    max-width: 720px;
+  }
+  .produtos-item {
+    width: 220px;
+  }
+}
+
+@media (max-width: 739px) {
+  .produtos-container {
+    max-width: 300px;
+  }
+  .produtos-item {
+    margin: 0 auto 20px auto;
+  }
 }
 
 /* === LOCAIS === */
@@ -265,6 +322,29 @@ h2.produtos-mineiro::before {
   border: 3px solid;
   color: #252525;
   padding: 10px 20px;
+}
+
+
+@media (max-width: 740px) and (max-width: 980px){
+  .locais {
+    max-width: 720px;
+  }
+  .locais-item > div {
+    width: 340px;
+  }
+  .locais-item img {
+    width: 340px;
+  }
+}
+
+@media (max-width: 739px) {
+  .locais {
+    max-width: 300px;
+  }
+  .locais-item img, .locais-item > div {
+    width: 300px;
+    margin: 0px;
+  }
 }
 
 /* === ASSINE === */
@@ -334,6 +414,26 @@ h2.produtos-mineiro::before {
   cursor: pointer;
 }
 
+@media (max-width: 740px) and (max-width: 980px){
+  .assine-container {
+    max-width: 720px;
+  }
+  .assine-info, .assine form, .assine input {
+    width: 340px;
+  }
+}
+
+@media (max-width: 739px) {
+  .assine-container {
+    max-width: 300px;
+  }
+  .assine-info, .assine form, .assine input {
+    width: 300px;
+    margin: 10px 0 0 0;
+  }
+}
+
+
 /* === FOOTER === */
 
 .footer {
@@ -364,3 +464,22 @@ h2.produtos-mineiro::before {
   margin: 0 10px;
   display: block;
 }
+
+@media (max-width: 739px) {
+  .footer-container {
+    max-width: 300px;
+  }
+  .footer p {
+    float: none;
+    margin: 0px;
+  }
+  .footer img {
+    float: none;
+    margin-top: 10px 0;
+  }
+}
+
+
+
+/* === RESPONSIVO === */
+
