--- a/brafe1-flexbox/css/style.css
+++ b/brafe1-flexbox/css/style.css
@@ -232,6 +232,20 @@ h2.produtos-mineiro::before {
 
 .assine {
 	background: #e7e4d8;
+	padding: 30px 0;
+}
+
+.assine-info {
+	flex: 1;
+	margin: 0 10px;
+}
+
+.assine form {
+	flex: 1;
+	margin: 0 10px;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
 }
 
 .assine-info h2 {
@@ -248,6 +262,9 @@ h2.produtos-mineiro::before {
 }
 
 .assine input {
+	flex: 1;
+	align-self: flex-start;
+	padding: 10px;
 	border: 3px solid #252525;
 	background: none;
 	font-size: 1.5em;
@@ -256,6 +273,9 @@ h2.produtos-mineiro::before {
 }
 
 .assine button {
+	flex: 1;
+	padding: 13px;
+	align-self: flex-start;
 	background: #252525;
 	border: none;
 	font-family: Georgia, serif;
@@ -269,9 +289,15 @@ h2.produtos-mineiro::before {
 
 .footer {
 	background: #d6d3c8;
+	padding: 40px 0;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	flex: 1;
+}
+
+.footer-img {
+	margin: 0 10px;
 }
