--- a/brafe1-bootstrap/css/style.css
+++ b/brafe1-bootstrap/css/style.css
@@ -1,5 +1,4 @@
 /* Reset */
-
 body, h1, h2, h3, p, ul {
 	padding: 0px;
 	margin: 0px;
@@ -96,7 +95,8 @@ img {
 /* Sobre */
 
 .sobre {
-	padding: 60px 0;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 .sobre h2 {
 	font-size: 2.25em;
@@ -232,10 +232,20 @@ h2.produtos-mineiro::before {
 
 .assine {
 	background: #e7e4d8;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.assine form {
+	margin-top: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
 }
 
 .assine-info h2 {
 	font-size: 2.25em;
+	font-weight: bold;
 }
 
 .assine-info p {
@@ -253,6 +263,8 @@ h2.produtos-mineiro::before {
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
+	align-self: flex-start;
+	padding: 10px;
 }
 
 .assine button {
@@ -263,15 +275,30 @@ h2.produtos-mineiro::before {
 	font-size: 1.5em;
 	color: #fff;
 	cursor: pointer;
+	align-self: flex-start;
+	padding: 13px;
 }
 
 /*Footer*/
 
 .footer {
 	background: #d6d3c8;
+	padding-top: 40px;
+	padding-bottom: 40px;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+}
+
+.footer img {
+	float: right;
+}
+
+@media (max-width: 768px) {
+	.footer img {
+		float: none;
+		margin-top: 20px;
+	}
 }
